// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilledCard renders with base props 1`] = `
<article
  className="lab-card lab-card--filled lab-card--teal lab-card--pale
          
          
          
        "
>
  Content
</article>
`;

exports[`FilledCard renders with extra className 1`] = `
<article
  className="lab-card lab-card--filled lab-card--teal lab-card--pale
          
          
           test-classname
        "
>
  Content
</article>
`;

exports[`FilledCard renders with isCompact 1`] = `
<article
  className="lab-card lab-card--filled lab-card--teal lab-card--pale
           lab-card--compact
          
          
        "
>
  Content
</article>
`;

exports[`FilledCard renders with isHorizontal 1`] = `
<article
  className="lab-card lab-card--filled lab-card--teal lab-card--pale
          
           lab-card--horizontal
          
        "
>
  Content
</article>
`;
